force-app/main/default/objects/RTL_Online_Service_Log__c/RTL_Online_Service_Log__c.object-meta.xml
<CustomObject>
    <description>This object capture error log from Retail online services</description>
    <label>Online Service Log</label>
    <nameField>
        <displayFormat>Log No{0000000}</displayFormat>
        <label>Online Service Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Service Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>