force-app/main/default/objects/RTL_Online_Service_Log__c/fields/dpt_Data_Partition_Log__c.field-meta.xml
<CustomField>
    <fullName>dpt_Data_Partition_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Partition Log</label>
    <type>Checkbox</type>
</CustomField>