force-app/main/default/objects/RTL_Online_Service_Log__c/fields/Online_Batch_Log__c.field-meta.xml
<CustomField>
    <fullName>Online_Batch_Log__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Online Batch Log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>