force-app/main/default/objects/RTL_Online_Service_Log__c/fields/Region_Code_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code_Group_Code__c</fullName>
    <formula>CreatedBy.Region_Code__c</formula>
    <label>Region Code / Group Code</label>
    <type>Text</type>
</CustomField>