force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_Account__c.field-meta.xml
<CustomField>
    <fullName>RTL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Online Service Logs</relationshipLabel>
    <relationshipName>Online_Service_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>