force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Customer_Name__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Reference Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>