force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>RTL_Customer_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Segment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>