force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>RTL_EmployeeID__c</fullName>
    <formula>IF( CreatedById &lt;&gt; null , CreatedBy.Employee_ID__c, &apos;&apos;)</formula>
    <label>EmployeeID</label>
    <type>Text</type>
</CustomField>