force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>RTL_End_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End DateTime</label>
    <type>DateTime</type>
</CustomField>