force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>RTL_Error_Message__c</fullName>
    <description>Consolidate Error Messages from Mulesoft</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>