force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_Is_Success__c.field-meta.xml
<CustomField>
    <fullName>RTL_Is_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>