force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_Mulesoft_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>RTL_Mulesoft_Log_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mulesoft Log Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>