force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_Name_of_User__c.field-meta.xml
<CustomField>
    <fullName>RTL_Name_of_User__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of User</label>
    <length>150</length>
    <type>Text</type>
</CustomField>