force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_Region_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_Region_Group__c</fullName>
    <formula>IF( CreatedById &lt;&gt; null , CreatedBy.Region__c, &apos;&apos;)</formula>
    <label>Region/Group</label>
    <type>Text</type>
</CustomField>