force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_RM_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_RM_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>