force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_RM_Name__c</fullName>
    <formula>IF( RTL_Account__c &lt;&gt; null , RTL_Account__r.RTL_RM_Name__c, &apos;&apos;)</formula>
    <label>EMP/BR Code</label>
    <type>Text</type>
</CustomField>