force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Service_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>