force-app/main/default/objects/RTL_Online_Service_Log__c/fields/RTL_Zone__c.field-meta.xml
<CustomField>
    <fullName>RTL_Zone__c</fullName>
    <formula>IF( CreatedById &lt;&gt; null , CreatedBy.Zone__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>