force-app/main/default/objects/RTL_Online_Service_Log__c/fields/Smart_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Smart_Branch_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Smart Branch Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>