force-app/main/default/objects/RTL_Online_Service_Log__c/fields/Smart_Queue_Found_Type__c.field-meta.xml
<CustomField>
    <fullName>Smart_Queue_Found_Type__c</fullName>
    <label>Smart Queue Found Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FOUND_AS_CUSTOMER</fullName>
                <label>Found as existing customers</label>
            </value>
            <value>
                <fullName>FOUND_AS_PROSPECT</fullName>
                <label>Found as prospect</label>
            </value>
            <value>
                <fullName>FOUND_AS_LEAD</fullName>
                <label>Found as Lead</label>
            </value>
            <value>
                <fullName>NO_FOUND</fullName>
                <label>Not found</label>
            </value>
            <value>
                <fullName>FOUND_MULTIPLE_ON_ACCOUNT</fullName>
                <label>Found Multiple Accounts</label>
            </value>
            <value>
                <fullName>FOUND_MULTIPLE_ON_LEAD</fullName>
                <label>Found Multiple Leads</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>